force-app/main/default/objects/ETT_JCC_Employee__c/ETT_JCC_Employee__c.object-meta.xml
<CustomObject>
    <label>JCC Employee</label>
    <nameField>
        <displayFormat>JCCE-{0000}</displayFormat>
        <label>JCC Employee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JCC Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>