force-app/main/default/objects/ETT_JCC_Employee__c/fields/Employee_Master__c.field-meta.xml
<CustomField>
    <fullName>Employee_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Master</label>
    <referenceTo>ETT_Tyre_Employee_Master__c</referenceTo>
    <relationshipLabel>JCC Employees</relationshipLabel>
    <relationshipName>JCC_Employees</relationshipName>
    <type>Lookup</type>
</CustomField>