force-app/main/default/objects/ETT_JCC_Employee__c/fields/ETT_Emp_No__c.field-meta.xml
<CustomField>
    <fullName>ETT_Emp_No__c</fullName>
    <label>Emp No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>