force-app/main/default/objects/ETT_JCC_Employee__c/fields/ETT_Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>ETT_Employee_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employee Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>