force-app/main/default/objects/ETT_JCC_Employee__c/fields/ETT_End_Time__c.field-meta.xml
<CustomField>
    <fullName>ETT_End_Time__c</fullName>
    <label>End Time</label>
    <type>Time</type>
</CustomField>