force-app/main/default/objects/ETT_JCC_Employee__c/fields/ETT_Job_Card_Close__c.field-meta.xml
<CustomField>
    <fullName>ETT_Job_Card_Close__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Card Close</label>
    <referenceTo>ETT_Job_Card_Close__c</referenceTo>
    <relationshipLabel>JCC Employees</relationshipLabel>
    <relationshipName>JCC_Employees</relationshipName>
    <type>Lookup</type>
</CustomField>