force-app/main/default/objects/ETT_JCC_Employee__c/fields/ETT_Job_Type__c.field-meta.xml
<CustomField>
    <fullName>ETT_Job_Type__c</fullName>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ETT_Job_Stages</valueSetName>
    </valueSet>
</CustomField>