force-app/main/default/objects/ETT_JCC_Employee__c/fields/ETT_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>ETT_Start_Time__c</fullName>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>