force-app/main/default/objects/ETT_JCC_Employee__c/fields/ETT_Working_Date__c.field-meta.xml
<CustomField>
    <fullName>ETT_Working_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Working Date</label>
    <type>Date</type>
</CustomField>